# OS-lab4-SDUCST2025

./: CMakeLists.txt  README.md
include/device/: device.h
include/fat16-directory/: directory.h
include/fat16-file/: file.h
include/fat16-partition/: format.h  partition.h
include/main/: init.h  shell.h
include/mbr/: format.h  mbr.h
include/utils/: time16.h  utils.h
src/device/: device.c
src/fat16-directory/: directory.c
src/fat16-file/: file.c
src/fat16-partition/: format.c  partition.c  time16.c
src/main/: init.c  main.c  shell.c
src/mbr/: format.c  mbr.c
src/utils/: time16.c  utils.c
